--- a/src/pages/layout.module.css
+++ b/src/pages/layout.module.css
@@ -1,5 +1,5 @@
 /* layout.module.css */
-.root {
+/* .root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -72,13 +72,13 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
   
-  * {
+  /* * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
+  } */
   
   html,
   body {
