Resolving Error: selector HTML, Body is not being pure.

--- a/src/pages/layout.module.css
+++ b/src/pages/layout.module.css
@@ -80,7 +80,7 @@
     margin: 0;
   } */
   
-  html,
+  /* html,
   body {
     max-width: 100vw;
     overflow-x: hidden;
@@ -105,7 +105,7 @@
     html {
       color-scheme: dark;
     }
-  }
+  } */
   
   .container {
     /* Add your layout styles here */
